# svh_authentivation

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile
configs/: config_vars.testing.yaml  static_config.yaml
postgresql/users_manager_db/: 000_init.sql
service/: main.cpp
src/models/: auth.hpp  cors.hpp  error_response.hpp  identity.hpp  task.hpp
src/sql/user/: create_user.sql  insert_user.sql  select_auth.sql
src/views/login/: handler.cpp  handler.hpp  handler_fwd.hpp  io.hpp
src/views/register/: handler.cpp  handler.hpp  handler_fwd.hpp  io.hpp
